--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Kabab Paradise Catch Game</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <!-- Neon font for branding -->
   <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&display=swap" rel="stylesheet">
   <style>
@@ -187,13 +186,13 @@
       {name: "Burger", emoji: "🍔"},
       {name: "Fries", emoji: "🍟"},
       {name: "Falafel", emoji: "🧆"},
+      {name: "Sambosa", emoji: "🥟"}, // Added Sambosa, removed Eggplant
       {name: "Baklava", emoji: "🧁"},
       {name: "Cake", emoji: "🍰"},
       {name: "Chicken", emoji: "🍗"},
       {name: "Lamb", emoji: "🍖"},
       {name: "Fish", emoji: "🐟"},
       {name: "Salad", emoji: "🥗"},
-      {name: "Eggplant", emoji: "🍆"},
       {name: "Sandwich", emoji: "🥪"},
       {name: "Taco", emoji: "🌮"},
       {name: "Pizza", emoji: "🍕"},
@@ -559,4 +558,3 @@
   </script>
 </body>
 </html>
-
